# Secretariat

./: secretariat_requirements.txt
secretariat-monorepo/: .gitignore  package.json  stress_test.sh
secretariat-monorepo/apps/desktop/: package.json
secretariat-monorepo/apps/desktop/src/: App.css  App.tsx  main.tsx
secretariat-monorepo/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
secretariat-monorepo/apps/desktop/src-tauri/src/: ai_orchestrator.rs  graph_engine.rs  lib.rs  sync_engine.rs  tests.rs  vault_manager.rs
secretariat-monorepo/apps/desktop/src/components/: BreakerBox.tsx  Button.tsx  ErrorBoundary.tsx  GraphView.tsx
secretariat-monorepo/apps/desktop/src/context/: ThemeContext.tsx
secretariat-monorepo/apps/mobile/: App.js  package.json  tailwind.config.js
secretariat-monorepo/apps/mobile/app/: _layout.tsx  index.tsx
